# 3dr

./: CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: main.cpp
